fix logic price